muva-urai-in-single-page

--- a/data-in/data/book-settings-copy.json
+++ b/data-in/data/book-settings-copy.json
@@ -15,7 +15,7 @@
       "lineNumber",
       "line1",
       "line2",
-      "urai"
+      "urai_1"
     ],
     "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/muva-urai/book.ftl",
     "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out/thirukkural-muva-urai.typ"
