--- a/data-in/data/book-settings.json
+++ b/data-in/data/book-settings.json
@@ -1,12 +1,13 @@
 [
   {
-    "bookName": "thirukkural",
+    "bookName": "thirukkural-with-muva-urai",
     "contentStructure": [
       "lineNumber",
       "line1",
-      "line2"
+      "line2",
+      "urai_1"
     ],
-    "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/book.ftl",
-    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out/thirukkural.typ"
+    "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/muva-urai/book.ftl",
+    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out/thirukkural-muva-urai.typ"
   }
 ]
