Cover page content

--- a/data-in/data/book-settings-changes.json
+++ b/data-in/data/book-settings-changes.json
@@ -1,12 +1,15 @@
 [
   {
     "bookName": "thirukkural-with-muva-urai",
+    "PrintKuralTopicFromTo": [1,133],
+    "PrintOption": "individual/book?",
     "contentStructure": [
       "lineNumber",
       "line1",
       "line2",
       "urai_1"
     ],
+    "individualTemplateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/muva-urai/topic.ftl",
     "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/muva-urai/book2.ftl",
     "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out/thirukkural-muva-urai.typ"
   }
