2nd book generation - author id added

--- a/data-in/data/book-settings.json
+++ b/data-in/data/book-settings.json
@@ -1,6 +1,7 @@
 [
   {
     "bookName": "thirukkural-with-muva-urai",
+    "authorId": 2,
     "contentStructure": [
       "lineNumber",
       "line1",
