--- a/data-in/data/book-settings.json
+++ b/data-in/data/book-settings.json
@@ -1,5 +1,19 @@
 [
   {
+    "bookName": "thirukkural-only",
+    "authorId": 1,
+    "firstKuralId": 1,
+    "lastKuralId": 1080,
+    "contentStructure": [
+      "lineNumber",
+      "line1",
+      "line2",
+      "urai_1"
+    ],
+    "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/thirukkural-only/book1.ftl",
+    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out/thirukkural-only.typ"
+  },
+  {
     "bookName": "muva-urai-format1",
     "authorId": 1,
     "firstKuralId": 1,
