Updating book-settings.json to be usable for home page - Code Refactoring

--- a/data-in/data/book-settings.json
+++ b/data-in/data/book-settings.json
@@ -1,194 +1,200 @@
-[
-  {
-    "author": "திருவள்ளுவர்",
-    "description": "திருக்குறள் மட்டும் 1080 வரை",
-    "bookName": "thirukkural-tamil-only-1080",
-    "authorId": 1,
-    "firstKuralId": 1,
-    "lastKuralId": 1080,
-    "contentStructure": [
-      "lineNumber",
-      "line1",
-      "line2",
-      "urai_1"
-    ],
-    "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/thirukkural-only/book1.ftl",
-    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
-  },
-  {
-    "author": "மு. வரதராசனார்",
-    "description": "10 குறள் முன் பக்கம் உரை பின் பக்கம்",
-    "bookName": "thirukkural-tamil-muva-urai-f1",
-    "authorId": 1,
-    "firstKuralId": 1,
-    "lastKuralId": 1080,
-    "contentStructure": [
-      "lineNumber",
-      "line1",
-      "line2",
-      "urai_1"
-    ],
-    "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/muva-urai/book1.ftl",
-    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
-  },
-  {
-    "author": "மு. வரதராசனார்",
-    "description": "குறளுக்கு கீழே உரை",
-    "bookName": "thirukkural-tamil-muva-urai-f2",
-    "authorId": 1,
-    "firstKuralId": 1,
-    "lastKuralId": 1080,
-    "contentStructure": [
-      "lineNumber",
-      "line1",
-      "line2",
-      "urai_1"
-    ],
-    "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/muva-urai/book2.ftl",
-    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
-  },
-  {
-    "author": "கலைஞர்",
-    "description": "10 குறள் முன் பக்கம் உரை பின் பக்கம்",
-    "bookName": "thirukkural-tamil-muka-urai-f1",
-    "authorId": 6,
-    "firstKuralId": 1,
-    "lastKuralId": 1080,
-    "contentStructure": [
-      "lineNumber",
-      "line1",
-      "line2",
-      "urai_1"
-    ],
-    "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/muka-urai/book1.ftl",
-    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
-  },
-  {
-    "author": "கலைஞர்",
-    "description": "குறளுக்கு கீழே உரை",
-    "bookName": "thirukkural-tamil-muka-urai-f2",
-    "authorId": 6,
-    "firstKuralId": 1,
-    "lastKuralId": 1080,
-    "contentStructure": [
-      "lineNumber",
-      "line1",
-      "line2",
-      "urai_1"
-    ],
-    "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/muka-urai/book2.ftl",
-    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
-  },
-  {
-    "author": "மணக்குடவர்",
-    "description": "10 குறள் முன் பக்கம் உரை பின் பக்கம்",
-    "bookName": "thirukkural-tamil-maku-urai-f1",
-    "authorId": 2,
-    "firstKuralId": 1,
-    "lastKuralId": 1080,
-    "contentStructure": [
-      "lineNumber",
-      "line1",
-      "line2",
-      "urai_1"
-    ],
-    "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/maku-urai/book1.ftl",
-    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
-  },
-  {
-    "author": "மணக்குடவர்",
-    "description": "குறளுக்கு கீழே உரை",
-    "bookName": "thirukkural-tamil-maku-urai-f2",
-    "authorId": 2,
-    "firstKuralId": 1,
-    "lastKuralId": 1080,
-    "contentStructure": [
-      "lineNumber",
-      "line1",
-      "line2",
-      "urai_1"
-    ],
-    "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/maku-urai/book2.ftl",
-    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
-  },
-  {
-    "author": "Kavi Yogi Shuddhananda Bharati",
-    "description": "Thirukkural front page translation back page",
-    "bookName": "thirukkural-english-ssb-urai-f1",
-    "authorId": 4,
-    "firstKuralId": 1,
-    "lastKuralId": 1080,
-    "contentStructure": [
-      "lineNumber",
-      "line1",
-      "line2",
-      "urai_1"
-    ],
-    "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/ssb-urai/book1.ftl",
-    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
-  },
-  {
-    "author": "Kavi Yogi Shuddhananda Bharati",
-    "description": "Each Thirukkural followed by the translation",
-    "bookName": "thirukkural-english-ssb-urai-f2",
-    "authorId": 4,
-    "firstKuralId": 1,
-    "lastKuralId": 1080,
-    "contentStructure": [
-      "lineNumber",
-      "line1",
-      "line2",
-      "urai_1"
-    ],
-    "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/ssb-urai/book2.ftl",
-    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
-  },
-  {
-    "author": "Kavi Yogi Shuddhananda Bharati",
-    "description": "Thirukkural translation only",
-    "bookName": "thirukkural-english-ssb-urai-f3",
-    "authorId": 4,
-    "firstKuralId": 1,
-    "lastKuralId": 1080,
-    "contentStructure": [
-      "lineNumber",
-      "line1",
-      "line2",
-      "urai_1"
-    ],
-    "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/ssb-urai/book3.ftl",
-    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
-  },
-  {
-    "author": "George Uglow Pope",
-    "description": "Thirukkural front page translation back page",
-    "bookName": "thirukkural-english-gupope-urai-f1",
-    "authorId": 5,
-    "firstKuralId": 1,
-    "lastKuralId": 1080,
-    "contentStructure": [
-      "lineNumber",
-      "line1",
-      "line2",
-      "urai_1"
-    ],
-    "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/pope-urai/book1.ftl",
-    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
-  },
-  {
-    "author": "George Uglow Pope",
-    "description": "Each Thirukkural followed by the translation",
-    "bookName": "thirukkural-english-gupope-urai-f2",
-    "authorId": 5,
-    "firstKuralId": 1,
-    "lastKuralId": 1080,
-    "contentStructure": [
-      "lineNumber",
-      "line1",
-      "line2",
-      "urai_1"
-    ],
-    "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/pope-urai/book2.ftl",
-    "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
-  }
-]
+{
+  "title": "அகர வரிசை - 1080 வரை",
+  "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/agaramudhali/agaramudhali-home.ftl",
+  "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out/agaramudhali/index.html",
+
+  "bookConfigurationList": [
+    {
+      "author": "திருவள்ளுவர்",
+      "description": "திருக்குறள் மட்டும் 1080 வரை",
+      "bookName": "thirukkural-tamil-only-1080",
+      "authorId": 1,
+      "firstKuralId": 1,
+      "lastKuralId": 1080,
+      "contentStructure": [
+        "lineNumber",
+        "line1",
+        "line2",
+        "urai_1"
+      ],
+      "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/thirukkural-only/book1.ftl",
+      "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
+    },
+    {
+      "author": "மு. வரதராசனார்",
+      "description": "10 குறள் முன் பக்கம் உரை பின் பக்கம்",
+      "bookName": "thirukkural-tamil-muva-urai-f1",
+      "authorId": 1,
+      "firstKuralId": 1,
+      "lastKuralId": 1080,
+      "contentStructure": [
+        "lineNumber",
+        "line1",
+        "line2",
+        "urai_1"
+      ],
+      "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/muva-urai/book1.ftl",
+      "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
+    },
+    {
+      "author": "மு. வரதராசனார்",
+      "description": "குறளுக்கு கீழே உரை",
+      "bookName": "thirukkural-tamil-muva-urai-f2",
+      "authorId": 1,
+      "firstKuralId": 1,
+      "lastKuralId": 1080,
+      "contentStructure": [
+        "lineNumber",
+        "line1",
+        "line2",
+        "urai_1"
+      ],
+      "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/muva-urai/book2.ftl",
+      "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
+    },
+    {
+      "author": "கலைஞர்",
+      "description": "10 குறள் முன் பக்கம் உரை பின் பக்கம்",
+      "bookName": "thirukkural-tamil-muka-urai-f1",
+      "authorId": 6,
+      "firstKuralId": 1,
+      "lastKuralId": 1080,
+      "contentStructure": [
+        "lineNumber",
+        "line1",
+        "line2",
+        "urai_1"
+      ],
+      "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/muka-urai/book1.ftl",
+      "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
+    },
+    {
+      "author": "கலைஞர்",
+      "description": "குறளுக்கு கீழே உரை",
+      "bookName": "thirukkural-tamil-muka-urai-f2",
+      "authorId": 6,
+      "firstKuralId": 1,
+      "lastKuralId": 1080,
+      "contentStructure": [
+        "lineNumber",
+        "line1",
+        "line2",
+        "urai_1"
+      ],
+      "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/muka-urai/book2.ftl",
+      "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
+    },
+    {
+      "author": "மணக்குடவர்",
+      "description": "10 குறள் முன் பக்கம் உரை பின் பக்கம்",
+      "bookName": "thirukkural-tamil-maku-urai-f1",
+      "authorId": 2,
+      "firstKuralId": 1,
+      "lastKuralId": 1080,
+      "contentStructure": [
+        "lineNumber",
+        "line1",
+        "line2",
+        "urai_1"
+      ],
+      "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/maku-urai/book1.ftl",
+      "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
+    },
+    {
+      "author": "மணக்குடவர்",
+      "description": "குறளுக்கு கீழே உரை",
+      "bookName": "thirukkural-tamil-maku-urai-f2",
+      "authorId": 2,
+      "firstKuralId": 1,
+      "lastKuralId": 1080,
+      "contentStructure": [
+        "lineNumber",
+        "line1",
+        "line2",
+        "urai_1"
+      ],
+      "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/maku-urai/book2.ftl",
+      "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
+    },
+    {
+      "author": "Kavi Yogi Shuddhananda Bharati",
+      "description": "Thirukkural front page translation back page",
+      "bookName": "thirukkural-english-ssb-urai-f1",
+      "authorId": 4,
+      "firstKuralId": 1,
+      "lastKuralId": 1080,
+      "contentStructure": [
+        "lineNumber",
+        "line1",
+        "line2",
+        "urai_1"
+      ],
+      "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/ssb-urai/book1.ftl",
+      "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
+    },
+    {
+      "author": "Kavi Yogi Shuddhananda Bharati",
+      "description": "Each Thirukkural followed by the translation",
+      "bookName": "thirukkural-english-ssb-urai-f2",
+      "authorId": 4,
+      "firstKuralId": 1,
+      "lastKuralId": 1080,
+      "contentStructure": [
+        "lineNumber",
+        "line1",
+        "line2",
+        "urai_1"
+      ],
+      "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/ssb-urai/book2.ftl",
+      "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
+    },
+    {
+      "author": "Kavi Yogi Shuddhananda Bharati",
+      "description": "Thirukkural translation only",
+      "bookName": "thirukkural-english-ssb-urai-f3",
+      "authorId": 4,
+      "firstKuralId": 1,
+      "lastKuralId": 1080,
+      "contentStructure": [
+        "lineNumber",
+        "line1",
+        "line2",
+        "urai_1"
+      ],
+      "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/ssb-urai/book3.ftl",
+      "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
+    },
+    {
+      "author": "George Uglow Pope",
+      "description": "Thirukkural front page translation back page",
+      "bookName": "thirukkural-english-gupope-urai-f1",
+      "authorId": 5,
+      "firstKuralId": 1,
+      "lastKuralId": 1080,
+      "contentStructure": [
+        "lineNumber",
+        "line1",
+        "line2",
+        "urai_1"
+      ],
+      "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/pope-urai/book1.ftl",
+      "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
+    },
+    {
+      "author": "George Uglow Pope",
+      "description": "Each Thirukkural followed by the translation",
+      "bookName": "thirukkural-english-gupope-urai-f2",
+      "authorId": 5,
+      "firstKuralId": 1,
+      "lastKuralId": 1080,
+      "contentStructure": [
+        "lineNumber",
+        "line1",
+        "line2",
+        "urai_1"
+      ],
+      "templateFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-in/templates/thirukkural/pope-urai/book2.ftl",
+      "outputFileAbsolutePath": "D:/git/spring-boot-learning/data-jpa-sqlite/data-out"
+    }
+  ]
+}
